# InvestmentEngine

./: .env.example  .gitignore  COLUMN_REFERENCE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  scaffold_pillar.py
.github/workflows/: data_engine.yml  update_ai_workbook.yml
investment-engine/: Ticker-Master.json
investment-engine/engine/: data_engine.py  push_watchlists.py
investment-engine/sector/AI/: pillar_tickers.json
investment-engine/sector/AI/stock-data/: consolidated_06152026.csv  consolidated_06172026.csv  consolidated_06182026.csv  investment_data_06152026.xlsx  investment_data_06172026.xlsx  investment_data_06182026.xlsx
investment-engine/sector/AI/ticker-review/: watchlist_06152026.json  watchlist_06172026.json  watchlist_06182026.json
investment-engine/stock-data/: consolidated_06192026.csv  consolidated_06202026.csv  consolidated_06212026.csv  consolidated_06222026.csv  consolidated_06232026.csv  consolidated_06242026.csv  consolidated_06252026.csv  consolidated_06262026.csv  consolidated_06272026.csv  consolidated_06282026.csv  consolidated_06292026.csv  consolidated_06302026.csv  consolidated_07012026.csv  consolidated_07022026.csv  consolidated_07032026.csv  consolidated_07042026.csv  consolidated_07052026.csv  consolidated_07062026.csv  consolidated_07072026.csv  consolidated_07082026.csv  consolidated_07092026.csv  consolidated_07102026.csv  consolidated_07112026.csv  consolidated_07122026.csv  consolidated_07132026.csv  consolidated_07142026.csv  consolidated_07152026.csv  consolidated_07162026.csv  consolidated_07172026.csv  consolidated_07182026.csv  consolidated_07192026.csv  consolidated_07202026.csv  consolidated_07212026.csv  consolidated_07222026.csv  consolidated_07232026.csv  consolidated_07242026.csv
investment-engine/ticker-review/: watchlist_06202026.json  watchlist_06212026.json
